--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
